export const snapshot = {};

snapshot[`it can copy, compile and vendor entrypoints producing valid import maps 1`] = `
[
  [
    "./public/image.jpg",
    "/public/image.9df55151.jpg",
  ],
  [
    "./public/style.css",
    "/public/style.efea7aaa.css",
  ],
]
`;

snapshot[`it can copy, compile and vendor entrypoints producing valid import maps 2`] = `
{
  imports: {
    "./client.tsx": "./client.c2b17382.js",
    "./src/app.tsx": "./src/app.651cde20.js",
    "./src/components/Test.tsx": "./src/components/Test.656a36a9.js",
    "https://deno.land/": "./vendor/browser/deno.land/",
    "https://esm.sh/": "./vendor/browser/esm.sh/",
    react: "./vendor/browser/esm.sh/stable/react@18.2.0/es2022/react.24f3ee19.js",
    "react-dom/client": "./vendor/browser/esm.sh/v93/react-dom@18.2.0/es2022/client.c9af7399.js",
    "react/jsx-runtime": "./vendor/browser/esm.sh/stable/react@18.2.0/es2022/jsx-runtime.5dec4442.js",
    twind: "./vendor/browser/esm.sh/v97/twind@0.16.17/es2022/twind.71caca50.js",
    "ultra/hooks/use-asset.js": "./vendor/browser/deno.land/x/ultra@v2.0.0-beta.8/hooks/use-asset.2c7829f6.js",
    "ultra/hydrate.js": "./vendor/browser/deno.land/x/ultra@v2.0.0-beta.8/hydrate.18d8cce9.js",
  },
  scopes: {
    "./vendor/browser/deno.land/": {
      "/x/": "./vendor/browser/deno.land/x/",
    },
    "./vendor/browser/esm.sh/": {
      "/stable/": "./vendor/browser/esm.sh/stable/",
      "/v93/": "./vendor/browser/esm.sh/v93/",
      "/v97/": "./vendor/browser/esm.sh/v97/",
    },
  },
}
`;

snapshot[`it can copy, compile and vendor entrypoints producing valid import maps 3`] = `
{
  imports: {
    "./server.tsx": "./server.js",
    "./src/app.tsx": "./src/app.651cde20.js",
    "./src/components/Test.tsx": "./src/components/Test.656a36a9.js",
    "https://deno.land/": "./vendor/server/deno.land/",
    "https://esm.sh/": "./vendor/server/esm.sh/",
    react: "./vendor/server/esm.sh/stable/react@18.2.0/deno/react.js",
    "react-dom/server": "./vendor/server/esm.sh/v93/react-dom@18.2.0/deno/server.js",
    "react/jsx-runtime": "./vendor/server/esm.sh/stable/react@18.2.0/deno/jsx-runtime.js",
    twind: "./vendor/server/esm.sh/v97/twind@0.16.17/deno/twind.js",
    "ultra/hooks/use-asset.js": "./vendor/server/deno.land/x/ultra@v2.0.0-beta.8/hooks/use-asset.js",
    "ultra/server.ts": "./vendor/server/deno.land/x/ultra@v2.0.0-beta.8/server.ts",
  },
  scopes: {
    "./vendor/server/deno.land/": {
      "/std@0.153.0/": "./vendor/server/deno.land/std@0.153.0/",
      "/std@0.159.0/": "./vendor/server/deno.land/std@0.159.0/",
      "/std@0.85.0/": "./vendor/server/deno.land/std@0.85.0/",
      "/std@0.97.0/": "./vendor/server/deno.land/std@0.97.0/",
      "/x/": "./vendor/server/deno.land/x/",
    },
    "./vendor/server/esm.sh/": {
      "/stable/": "./vendor/server/esm.sh/stable/",
      "/v93/": "./vendor/server/esm.sh/v93/",
      "/v97/": "./vendor/server/esm.sh/v97/",
    },
  },
}
`;

snapshot[`it can copy and compile entrypoints producing valid import maps 1`] = `
[
  [
    "./public/image.jpg",
    "/public/image.9df55151.jpg",
  ],
  [
    "./public/style.css",
    "/public/style.efea7aaa.css",
  ],
]
`;

snapshot[`it can copy and compile entrypoints producing valid import maps 2`] = `
{
  imports: {
    "./client.tsx": "./client.c2b17382.js",
    "./src/app.tsx": "./src/app.651cde20.js",
    "./src/components/Test.tsx": "./src/components/Test.656a36a9.js",
    "https://deno.land/": "https://deno.land/",
    "https://esm.sh/": "https://esm.sh/",
    react: "https://esm.sh/stable/react@18.2.0/es2022/react.js",
    "react-dom/client": "https://esm.sh/v93/react-dom@18.2.0/es2022/client.js",
    "react/jsx-runtime": "https://esm.sh/stable/react@18.2.0/es2022/jsx-runtime.js",
    twind: "https://esm.sh/v97/twind@0.16.17/es2022/twind.js",
    "ultra/hooks/use-asset.js": "https://deno.land/x/ultra@v2.0.0-beta.8/hooks/use-asset.js",
    "ultra/hydrate.js": "https://deno.land/x/ultra@v2.0.0-beta.8/hydrate.js",
  },
  scopes: {
    "https://deno.land/": {
      "/x/": "https://deno.land/x/",
    },
    "https://esm.sh/": {
      "/stable/": "https://esm.sh/stable/",
      "/v93/": "https://esm.sh/v93/",
      "/v97/": "https://esm.sh/v97/",
    },
  },
}
`;

snapshot[`it can copy and compile entrypoints producing valid import maps 3`] = `
{
  imports: {
    "./server.tsx": "./server.js",
    "./src/app.tsx": "./src/app.651cde20.js",
    "./src/components/Test.tsx": "./src/components/Test.656a36a9.js",
    "https://deno.land/": "https://deno.land/",
    "https://esm.sh/": "https://esm.sh/",
    react: "https://esm.sh/stable/react@18.2.0/deno/react.js",
    "react-dom/server": "https://esm.sh/v93/react-dom@18.2.0/deno/server.js",
    "react/jsx-runtime": "https://esm.sh/stable/react@18.2.0/deno/jsx-runtime.js",
    twind: "https://esm.sh/v97/twind@0.16.17/deno/twind.js",
    "ultra/hooks/use-asset.js": "https://deno.land/x/ultra@v2.0.0-beta.8/hooks/use-asset.js",
    "ultra/server.ts": "https://deno.land/x/ultra@v2.0.0-beta.8/server.ts",
  },
  scopes: {
    "https://deno.land/": {
      "/std@0.153.0/": "https://deno.land/std@0.153.0/",
      "/std@0.159.0/": "https://deno.land/std@0.159.0/",
      "/std@0.85.0/": "https://deno.land/std@0.85.0/",
      "/std@0.97.0/": "https://deno.land/std@0.97.0/",
      "/x/": "https://deno.land/x/",
    },
    "https://esm.sh/": {
      "/stable/": "https://esm.sh/stable/",
      "/v93/": "https://esm.sh/v93/",
      "/v97/": "https://esm.sh/v97/",
    },
  },
}
`;
